Correcting issue with validation check